Started adding multi-lang support. Hebrew first
Just a couple files to see the mechanism works.

NOTE: Need to use virtualenv, install mkdocs plugin (using pip requirements.txt)

--- a/docs/01/ch_01.md
+++ b/docs/01/ch_01.md
@@ -11,7 +11,7 @@ In this chapter we will:
 ## Using a virtual machine (don't skip it!)
 During the course, we will run and sometime break things. To run easily, we use a magical invention: A virtual computer (which is actually just a program running in your real computer) that runs the linux OS.
 This allows for running linux inside Windows, and when breaking things, we can go back to a safe state.
-Read [this](./virtual_machines.md) and come back here.
+Read [this: VIRTUAL MACHINES](./virtual_machines.md) and come back here.
 
 
 # From power-on to running linux
