fix site url so github works correctly (better)

--- a/docs/01/ch_01.md
+++ b/docs/01/ch_01.md
@@ -1,3 +1,5 @@
+👍
+
 # Chapter 01 - Introduction to linux and WSL
 
 In this chapter we will:
@@ -45,7 +47,7 @@ Let's look at this flow:
 1. Look at the prints during the boot of Alpine. Can some of the servies be removed (i.e. not started) if we use this instlation without internet. Just look for the names in the internet. No need to actualy modify the boot process.
 2. **advanced!** : Find where alpine stores its kernel loading configuration, and try to remove parts. Your goal is to reduce the boot time to minimum.
   
-  >>>> TIP: At some point, you will ruin the config file and the Alpine will get stuck during boot. Instead of trying to fix it (you don't have access to the files 😄), Use the virtualBox [**snapshot**](https://docs.oracle.com/en/virtualization/virtualbox/6.0/user/snapshots.html) feature before you start breaking the OS.
+  > TIP: At some point, you will ruin the config file and the Alpine will get stuck during boot. Instead of trying to fix it (you don't have access to the files 😄), Use the virtualBox [**snapshot**](https://docs.oracle.com/en/virtualization/virtualbox/6.0/user/snapshots.html) feature before you start breaking the OS.
 
 
 
