--- a/docs/02/ch_02.md
+++ b/docs/02/ch_02.md
@@ -7,15 +7,17 @@ A file system is the way an operating system organizes and manages data on a sto
 
 
 Think of it like a Library:
+
 - The books are your files.
 - The shelves and catalog system are the file system.
-- It keeps track of where each file is, what it's called, when it was last modified, and who can access it.
+
+It keeps track of where each file is, what it's called, when it was last modified, and who can access it.
 
 Sometime you (the end user) doesn't care at all about files and folders. Other times, it is critical for the proper usage of the program you now need.
 
-for example, when using Google docs, you are not aware of files. You see only documents and pictures, and Google' code is responsibe to expose only the nice view without exposing the underlying file structures. But it is there anyhow.
+for example, when using Google docs, you are not aware of files. You see only documents and pictures, and Google' code is responsible to expose only the nice view without exposing the underlying file structures. But it is there anyhow.
 
-When using Windows or linux, you need to be aware of the file system. For example, if you have two disks (C: and D: ), and disk C: is full, it is YOUR responsibilty to delete files and move to other places.
+When using Windows or linux, you need to be aware of the file system. For example, if you have two disks (C: and D: ), and disk C: is full, it is YOUR responsibility to delete files and move to other places.
 
 See the table and guess which file system is the oldest:
 
@@ -32,7 +34,7 @@ See the table and guess which file system is the oldest:
 | **APFS**    | macOS                       | 8 EB               | Virtually unlimited      | Modern, optimized for SSDs                       |
 
 
-Is storing file in folders, creating hierachical tree, the only way? Short answer is no, but practically, the alternatives are not common.
+Is storing file in folders, creating hierarchical tree, the only way? Short answer is no, but practically, the alternatives are not common.
 
 Most desktops and servers still use traditional hierarchical file systems like:
 
@@ -43,6 +45,7 @@ Most desktops and servers still use traditional hierarchical file systems like:
 These systems are fast, mature, widely supported, and fit the mental model users and software expect — folders, paths, permissions.
 
 Why Alternatives Aren’t Common as Primary FS:
+
 - Compatibility: Most software expects paths like /home/user/file.txt.
 - User Expectation: Hierarchies are simple and intuitive.
 - Tools & APIs: Most OS APIs and shell tools (like ls, cd, cp) assume a directory tree.
@@ -64,7 +67,7 @@ Advanced users of linux can choose the file system that is best for a specific j
 
 * Let's say you have a disk of 1TB with a file system, and the disk is almost full. Is it possible to add another disk, and "expand" the file system to use both disks? This will allow transparent growth - no more "drive C: is full, D: is empty and I can't move from there to here". Take it to ChatGpt
 
-## Is it realy that simple?
+## Is it really that simple?
 We can spend a few years discussing problems and solutions of file systems. Ask an AI about it, and prepare a long time.
 
 
@@ -74,7 +77,7 @@ Regardless of the file system used, the structure (directories) looks the same. 
 
 The Linux file system structure refers to how files and directories are organized in a Linux system. It starts with a single root directory /, and everything branches off from there — unlike Windows, which has separate drive letters (C:\, D:\, etc.).
 
- Having everything (realy everything, even if you have 12 disks and network drives) is under "/". This is a very strong abstraction as we will see in the future.
+ Having everything (really everything, even if you have 12 disks and network drives) is under "/". This is a very strong abstraction as we will see in the future.
 
  ## history lesson
  In Windows, You are tied to the physical disk installed. But unix was before Windows, so why the latter OS is more primitive?
@@ -82,17 +85,17 @@ The Linux file system structure refers to how files and directories are organize
  Windows took it from DOS, missing the opportunity to getting mature. <br>
  DOS took it from CP/M  -- a tiny OS that Bill Gates based the DOS on (* GPT said: '⭐ Overall Verdict: ✅ Mostly accurate, with some historical simplification' ).
 
- CP/M was tiny OS, targetted for 1980' PC, with one or two floppy drives. There was no reason to write complicated code like in unix.
+ CP/M was tiny OS, targeted for 1980' PC, with one or two floppy drives. There was no reason to write complicated code like in unix.
 
  Why C: ?<br>
- In the begnining, only rich people had a hard drive! A PC had two Floppy drives  called A: and B: (and somtime only one). The letters were not movable: even if you don't have drive B:, the first harddisk must be C:.  <br>
+ In the beginning, only rich people had a hard drive! A PC had two Floppy drives  called A: and B: (and sometime only one). The letters were not movable: even if you don't have drive B:, the first hard disk must be C:.  <br>
  And so in 2025, some 35 years later, we are still suffering from that early sin.
 
  ![ancient PC with 2 floppy drives](../assets/02/4CG9Dyx.jpeg)
 
 
 ## The general tree structure in linux systems
-There is a [Filesystem Hierarchy Standard](https://refspecs.linuxfoundation.org/FHS_3.0/fhs/index.html) and more or less, all distros use it. The differences are where exactly some files are stored inside a sub directory. (annoying, but managable)
+There is a [Filesystem Hierarchy Standard](https://refspecs.linuxfoundation.org/FHS_3.0/fhs/index.html) and more or less, all distros use it. The differences are where exactly some files are stored inside a sub directory. (annoying, but manageable)
 
 ```
 /
@@ -150,7 +153,7 @@ To summarize the above:
 * you can read most of the files in the system (i.e. under '/')
 * programs are stored in mainly in /bin and /sbin (but we don't care much as long as it works)
 * the general tree structure is kept in all linux distros.
-* EVERTYHING is under "/" (the root, not to be confused with the "root user").Even remote disks and network drives.
+* EVERYTHING is under "/" (the root, not to be confused with the "root user").Even remote disks and network drives.
 
 
 
